# simple_rag

./: .env.example  main.py  pyproject.toml
